# rlm-dspy

./: .env.example  .gitignore  CODE_REVIEW_FINDINGS.md  DSPY_OPTIMIZER_HALLUCINATION.md  GEPA_INVESTIGATION.md  HALLUCINATION_ANALYSIS.md  PR_SUMMARY.md  README.md  pyproject.toml
benchmarks/: PROVIDER_BENCHMARK_REPORT.md  RESULTS.md  accuracy_test.py  benchmark_modaic_patterns.py  benchmark_utilities.py  compare_llm_vs_rlm.py  comprehensive_comparison.py  provider_benchmark.py  provider_benchmark_results.json
docs/: DEAD_CODE_REMOVAL_PLAN.md  ENHANCEMENT_PLAN.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  LSP_IMPLEMENTATION_PLAN.md  MODAIC_PATTERNS.md  PROVIDERS.md  TESTING.md  gepa-optimization.md
plans/: HALLUCINATION_FIXES.md  IMPLEMENTATION_COMPLETE.md  OPTIMIZER_INTEGRATION_PLAN.md  TASKS.md
scripts/: check_file_length.py
src/rlm_dspy/: __init__.py  cli.py  cli_auth.py  cli_daemon.py  cli_index.py  cli_main.py  cli_models.py  cli_optimize.py  cli_project.py  cli_traces.py  guards.py  signatures.py  tools.py  tools_code.py  tools_search.py
src/rlm_dspy/core/: __init__.py  anthropic_oauth_lm.py  anthropic_types.py  antigravity_lm.py  antigravity_oauth.py  ast_index.py  async_client.py  batch.py  builder.py  callbacks.py  citations.py  config.py  config_utils.py  content_hash.py  daemon.py  daemon_worker.py  debug.py  embeddings.py  fileutils.py  fileutils_base.py  fileutils_context.py  fileutils_io.py  fileutils_path.py  gepa_optimizer.py  gepa_proxy.py  google_oauth.py  google_oauth_lm.py  grounded_proposer.py  grounded_tools.py  index_compression.py  instruction_optimizer.py  json_utils.py  kimi_lm.py  knn_fewshot.py  lsp.py  lsp_installer.py  minimax_lm.py  models.py  oauth.py  observability.py  (+27 more)
src/rlm_dspy/core/oauth/: __init__.py  anthropic.py  base.py  google.py  manager.py
src/rlm_dspy/scripts/: generate_models.py
tests/: accuracy_test.py  accuracy_test_hard.py  accuracy_test_v2.py  test_ast_index.py  test_builder.py  test_callbacks.py  test_citations.py  test_config.py  test_config_utils.py  test_content_hash.py  test_daemon.py  test_debug.py  test_embeddings.py  test_fileutils.py  test_grounded_proposer.py  test_guards.py  test_index_compression.py  test_instruction_optimizer.py  test_integration.py  test_json_utils.py  test_knn_fewshot.py  test_lsp.py  test_lsp_integration.py  test_modaic_patterns.py  test_oauth.py  test_paste_store.py  test_project_registry.py  test_retry.py  test_rlm.py  test_salsa.py  test_secrets.py  test_simba_optimizer.py  test_syntax_chunker.py  test_token_stats.py  test_tools.py  test_trace_collector.py  test_user_config.py  test_validation.py  test_vector_index.py
