[project]
name = "rlm-dspy"
version = "0.1.0"
description = "Recursive Language Models with DSPy - combining RLM's recursive decomposition with DSPy's optimized prompts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Continuous Claude" }]
keywords = ["llm", "rlm", "dspy", "recursive", "language-models", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "dspy>=2.6.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pathspec>=0.12.0",
    "pyyaml>=6.0.0",
    # NumPy for vector operations (embeddings, compression)
    "numpy>=1.24.0",
    # JSON repair for handling malformed LLM output
    "json_repair>=0.30.0",
    # Tree-sitter for AST-based code indexing (100% accurate line numbers)
    "tree-sitter>=0.23.0",
    # Core languages
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    # Additional languages
    "tree-sitter-kotlin>=1.0.0",
    "tree-sitter-scala>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-lua>=0.2.0",
    "tree-sitter-bash>=0.23.0",
    "tree-sitter-haskell>=0.21.0",
    # FAISS for fast vector similarity search (semantic search)
    "faiss-cpu>=1.7.0",
    # Watchdog for file system monitoring (daemon auto-indexing)
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
# For local embeddings (no API key required)
local = [
    "sentence-transformers>=2.0.0",
]
# All optional features
all = [
    "sentence-transformers>=2.0.0",
]

[project.scripts]
rlm-dspy = "rlm_dspy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm_dspy"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require API key)",
]

# Custom lint check for file length
[tool.file-length]
max-lines = 500
paths = ["src", "tests"]
